# apps/chat_service/src/endpoints/messages/message.controller.ts
@@ -11,8 +11,8 @@ export default {
     res.status(StatusCodes.OK);
     res.json(messages);
   },
-
-
+  
+  
   async getMessageById(req: Request, res: Response): Promise<void> {
     const message = await database.client.messageModel?.getEntryWithId(Number(req.params.messageId));
     if (!message) {
@@ -21,8 +21,8 @@ export default {
     res.status(StatusCodes.OK);
     res.json(message);
   },
-
-
+  
+  
   async createMessage(req: Request, res: Response): Promise<void> {
     const message = await database.client.messageModel?.addEntry(req.body);
     res.status(StatusCodes.CREATED);
@@ -30,13 +30,25 @@ export default {
   },
 
 
+  async createMessageWithConversationId(req: Request, res: Response): Promise<void> {
+    const conversation = await database.client.conversationModel?.getEntryWithId(Number(req.params.conversationId));
+    if (!conversation) {
+      throw new NotFoundError('Conversation inexistante');
+    }
+
+    const message = await database.client.messageModel?.addEntry({ ...req.body, conversation_id: Number(req.params.conversationId) });
+    res.status(StatusCodes.CREATED);
+    res.json(message);
+  },
+  
+  
   async updateMessage(req: Request, res: Response): Promise<void> {
     const updatedMessage = await database.client.messageModel?.updateEntryWithId(Number(req.params.messageId), req.body);
     res.status(StatusCodes.OK);
     res.json(updatedMessage);
   },
-
-
+  
+  
   async removeMessageById(req: Request, res: Response): Promise<void> {
     const message = await database.client.messageModel?.getEntryWithId(Number(req.params.messageId));
     if (!message) {
@@ -46,4 +58,16 @@ export default {
     res.status(StatusCodes.NO_CONTENT);
     res.json(message);
   },
+  
+  
+  async getMessageWithConversationId(req: Request, res: Response): Promise<void> {
+    const conversation = await database.client.conversationModel?.getEntryWithId(Number(req.params.conversationId));
+    if (!conversation) {
+      throw new NotFoundError('Conversation inexistante');
+    }
+    
+    const messages = await database.client.messageModel?.getEntries({ conversation_id: req.params.conversationId });
+    res.status(StatusCodes.OK);
+    res.json(messages);
+  }
 };
